updated cloudbuild configs
